# quick-suite-router

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  app.py  blog-post.md  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt  trivy.yaml
.github/workflows/: ci.yml  security.yml
config/: routing_config.example.yaml  routing_config.yaml
docs/: architecture.md  quicksuite-integration.md  setup-anthropic.md  setup-bedrock.md  setup-gemini.md  setup-openai.md
gtm/: am-talking-points.md  bd-playbook.md  blog-post.md  objection-handling.md
lambdas/common/python/: provider_interface.py
lambdas/providers/: anthropic_provider.py  bedrock_provider.py  gemini_provider.py  openai_provider.py
lambdas/router/: handler.py
quicksuite/: agent-template.json  openapi_spec.json
stacks/: model_router_stack.py  multi_region_stack.py
tests/: conftest.py  test_guardrails_integration.py  test_integration_bedrock.py  test_providers.py  test_router.py  test_stack.py  test_streaming.py
tests/e2e/: conftest.py  test_cache_e2e.py  test_health_status_e2e.py  test_phi_routing_e2e.py  test_spend_e2e.py  test_tools_e2e.py  test_validation_e2e.py
